# libglz

./: .clang-format  .gitignore  CMakeLists.txt  testmath.cpp  testwindow.cpp
inc/math/: m4.h  v3.h
inc/window/: input.h  window.h
lib/inc/glad/: glad.h
lib/src/glad/: makefile
lib/src/glad/src/: glad.c
lib/src/glfw-3.3.8/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/src/glfw-3.3.8/docs/: Doxyfile  Makefile  cmake_install.cmake
lib/src/glfw-3.3.8/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  internal_8dox.html  internals_guide.html  intro_8dox.html  intro_guide.html  main_8dox.html  (+18 more)
lib/src/glfw-3.3.8/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
lib/src/glfw-3.3.8/src/: Makefile  cmake_install.cmake
lib/src/glfw-3.3.8/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
modules/core/inc/: platform.h  program.h  shader.h
modules/core/src/: program.cpp  shader.cpp
modules/math/inc/: v2.h  v4.h
modules/math/src/: m4.cpp  v2.cpp  v3.cpp  v4.cpp
modules/math/test/: test_math.cpp
modules/window/inc/: event.h  input.h  window.h
modules/window/src/: window.cpp
modules/window/test/: test_window.cpp
src/math/: m4.cpp  v2.cpp  v3.cpp  v4.cpp
src/window/: window.cpp
test/: veracity.h
